# PyTECGg

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: pytest.yml  upload-rinex.yml
libtecrs/: Cargo.toml
libtecrs/src/: bk_broken_lib.rs  bk_lib.rs  lib.rs
pytec/: rinex.py  test.py
pytec/satellites/: __init__.py  ephemeris.py  kepler.py  positions.py
pytecal-rs/: Cargo.toml
pytecal-rs/src/: lib.rs
pytecal/phase/: __init__.py  gflc.py  ipp.py
pytecal/satellites/: __init__.py  ephemeris.py  glonass.py  positions.py
pytecgg/: rinex.py
pytecgg-rs/: Cargo.toml
pytecgg-rs/src/: lib.rs
pytecgg/satellites/: ephemeris.py  positions.py
rinex/v3/nav/: BRDC00GOP_R_20140920000_01D_MN.rnx  BRDC00WRD_R_20250870000_01D_MN.rnx
rinex/v3/obs/: ASIR00ITA_R_20242810000_01D_30S_MO.crx
tests/: conftest.py  test_ephemeris.py  test_ipp.py  test_kepler.py  test_obs.py  test_positions.py  test_time_utils.py
