[tool.poetry]
name = "pytec"
version = "0.1.0"
description = "Total Electron Content (TEC) reconstruction with GNSS data"
authors = ["Vincenzo <vincenzo.ventriglia@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.0"
polars = "^1.20.0"


[tool.poetry.group.dev.dependencies]
maturin = "^1.8.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
