[tool.poetry]
name = "pytec"
version = "0.1.0"
description = "Total Electron Content (TEC) reconstruction with GNSS data"
authors = ["Vincenzo <vincenzo.ventriglia@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
polars = "^1.20.0"

[tool.poetry.group.dev.dependencies]
maturin = "^1.8.7"
pytest = "^8.4.1"
pytest-cov = "^6.0.0"
jupyter = "^1.1.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=pytec --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
